--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                <li>HTML</li>
                <li>CSS3</li>
                <li>Git/GitHub</li>
-               <li>Django, Matplotlib, Pandas, Keras, TensorFlow</li>
+               <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow</li>
             </ul>
          </section>
          <section id="code">
