--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <li>Python</li>
                <li>JavaScript</li>
                <li>HTML</li>
-               <li>CSS3</li>
+               <li>CSS</li>
                <li>Git/GitHub</li>
                <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow</li>
             </ul>
