--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
          <section id="education">
             <h2>Education</h2>
             <ul>
-               <li>Izhevsk State Technical University (ISTU):
+               <li>Kalashnikov Izhevsk State Technical University (ISTU):
                   <ul>
                      <li>
                         Bachelor, Economics
