feat: Visual Basic

--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
             <ul>
                <li>Python</li>
                <li>JavaScript</li>
-               <li>HTML</li>
+               <li>Visual Basic</li>
+	       <li>HTML</li>
                <li>CSS</li>
                <li>Git/GitHub</li>
                <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow</li>
