--- a/index.html
+++ b/index.html
@@ -83,11 +83,8 @@
          <section id="technical-stack">
             <h2>Technical Stack</h2>
             <ul>
-               <li>Python</li>
-               <li>JavaScript</li>
-               <li>Visual Basic</li>
-	       <li>HTML</li>
-               <li>CSS</li>
+               <li>Python, JavaScript, Visual Basic</li>
+	       <li>HTML, CSS</li>
                <li>Git/GitHub</li>
                <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow</li>
             </ul>
