--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                <li>Python, JavaScript, Visual Basic</li>
 	       <li>HTML, CSS</li>
                <li>Git/GitHub</li>
-               <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow</li>
+               <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow, Jupyter Notebook</li>
             </ul>
          </section>
          <section id="code">
