feat: pc repair

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 	       <li>HTML, CSS</li>
                <li>Git/GitHub</li>
                <li>Django, Matplotlib, Pandas, NumPy, Keras, TensorFlow, Jupyter Notebook</li>
+	       <li>I repair and modify old and new PCs and laptops.</li>
             </ul>
          </section>
          <section id="code">
