--- a/index.html
+++ b/index.html
@@ -116,6 +116,13 @@
                      </li>
                   </ul>
                </li>
+               <li>The Rolling Scopes School (RS School):
+                  <ul>
+                     <li>
+                        JS/FE pre-school 2022Q2 (JavaScript)
+                     </li>
+                  </ul>
+               </li>
             </ul>
          </section>
          <section id="languages">
