--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                <a href="#technical-stack">Technical stack</a>
             </li>
             <li>
-               <a href="#code">Code</a>
+               <a href="projecte">Code</a>
             </li>
             <li>
                <a href="#education">Education</a>
@@ -90,18 +90,19 @@
 	       <li>I repair and modify old and new PCs and laptops.</li>
             </ul>
          </section>
-         <section id="code">
-            <h2>Code</h2>
-            <pre><code>function animals(heads, legs){
-            	var farm = [];
-            	farm.push(2*heads - legs/2);
-            	farm.push(legs/2 - heads);
-            	if (legs % 2 == 0 && farm[0] >= 0 && farm[1] >= 0){
-            		return farm;
-            	} else {
-            		return 'No solutions';
-            	}
-            }</code></pre>
+         <section id="project">
+            <h2>Projects</h2>
+            <ul>
+               <li>Improving the methodology for assessing the effectiveness of planning regional 
+		       expenditures (on the example of the budgets of the subjects of the Volga Federal District)
+                  <ul>
+                     <li>
+                        The methodology for evaluating the efficiency of spending planning in the constituent entities 
+			     of the Russian Federation has been improved
+                     </li>
+                  </ul>
+               </li>
+            </ul>
          </section>
          <section id="education">
             <h2>Education</h2>
